[metadata]
name = perception_algorithms
author = Anand Balakrishnan
version = 0.1.0
description = A collection of deep perception algorithms
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:
python_requires = ~= 3.7
install_requires =
  torch~=1.8
  torchvision>=0.9
  pytorch-lightning
